# unified-ml

./: .gitignore  CMakeLists.txt  LICENSE  NPU_STATUS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: pytorch_comparison.py
docs/: architecture.md
include/: unified_ml.h
python/: unified_ml.py
src/: attention.hip  gguf_loader.py  matmul.hip  unified_memory.hip
tests/: test_gguf_loader.py  test_unified_ml.py
vulkan/: attention.comp  attention.spv  benchmark_comparison.py  matmul.comp  matmul.spv  unified_memory.comp  unified_memory.spv
